--- a/src/properties/ftpClientProperties.properties
+++ b/src/properties/ftpClientProperties.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-ftpserver = localhost
-ftpuser = admin
-ftppassword = abcd*1234
-ftpdirectory = 
+ftpServer = localhost
+ftpUser = admin
+ftpPassword = abcd*1234
+ftpRootDirectory = 
