--- a/src/properties/ftpClientProperties.properties
+++ b/src/properties/ftpClientProperties.properties
@@ -1,7 +1,8 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-ftpServer = localhost
+ftpServer = MACINF05
+ftpServerPort = 6000
 ftpUser = admin
 ftpPassword = abcd*1234
-ftpRootDirectory = 
+ftpRootDirectory = /
