--- a/src/properties/Properties.properties
+++ b/src/properties/Properties.properties
@@ -2,3 +2,6 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 server_url = http://localhost:8080/grupo4/webresources
+mongo_url = mongodb://localhost:27017/incidAppMongo
+mongo_database = incidAppMongo
+mongo_collection= incidApp
