--- a/src/properties/ftpClientProperties.properties
+++ b/src/properties/ftpClientProperties.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 ftpServer = localhost
-ftpServerPort = 4000
-ftpUser = user
+ftpServerPort = 6000
+ftpUser = admin
 ftpPassword = abcd*1234
 ftpRootDirectory = /
