06/02/2019 Commit of all

--- a/src/properties/Properties.properties
+++ b/src/properties/Properties.properties
@@ -5,3 +5,4 @@ server_url = http://localhost:8080/grupo4/webresources
 mongo_url = mongodb://localhost:27017/incidAppMongo
 mongo_database = incidAppMongo
 mongo_collection= incidApp
+key = C:\Users\2dam\Desktop\public.key
