30/01/2019 commit with exception modified

--- a/src/properties/Properties.properties
+++ b/src/properties/Properties.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-server_url = http://hz059359:8080/grupo4/webresources/
+server_url = http://localhost:8080/grupo4/webresources/
 mongo_url = mongodb://localhost:27017/incidAppMongo
 mongo_database = incidAppMongo
 mongo_collection= incidApp
