--- a/src/properties/ftpClientProperties.properties
+++ b/src/properties/ftpClientProperties.properties
@@ -6,4 +6,5 @@ ftpServerPort = 6000
 ftpUser = admin
 ftpPassword = abcd*1234
 ftpRootDirectory = /
-key = C:\\Users\\2dam\\Desktop\\public.key
+key = public.key
+#key = C:\\Users\\2dam\\Desktop\\public.key
