--- a/src/properties/ftpClientProperties.properties
+++ b/src/properties/ftpClientProperties.properties
@@ -6,3 +6,4 @@ ftpServerPort = 6000
 ftpUser = admin
 ftpPassword = abcd*1234
 ftpRootDirectory = /
+key = C:\\Users\\2dam.TARTANGALH\\Documents\\Netbeansprojects\\IncidAppDesktop\\public.key
